--- a/_config.yml
+++ b/_config.yml
@@ -3,17 +3,17 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hexo
+title: Mathi Gatti
 subtitle: ''
-description: ''
+description: 'My personal website'
 keywords:
-author: John Doe
+author: Mathi Gatti
 language: en
 timezone: ''
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://yoursite.com
+url: https://mathigatti.com
 root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
