--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 # Site
 title: Mathi Gatti
 subtitle: ''
-description: 'My personal website'
+description: 'Data Scientist and Creative Coder'
 keywords:
 author: Mathi Gatti
 language: en
