--- a/_config.yml
+++ b/_config.yml
@@ -21,6 +21,13 @@ pretty_urls:
   trailing_index: true # Set to false to remove trailing 'index.html' from permalinks
   trailing_html: true # Set to false to remove trailing '.html' from permalinks
 
+
+menu:
+  home: /
+  blog: /archives
+  about: /about
+  reviews: /reviews
+
 # Directory
 source_dir: source
 public_dir: public
@@ -93,7 +100,7 @@ ignore:
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: anatole
+theme: edinburgh
 
 archive_generator:
   per_page: 0  
