--- a/_config.yml
+++ b/_config.yml
@@ -24,6 +24,7 @@ pretty_urls:
 
 menu:
   home: /
+  archives: /archives
   about: /about
   reviews: /reviews
 
@@ -64,7 +65,7 @@ highlight:
 # order_by: Posts order. (Order by date descending by default)
 index_generator:
   path: ''
-  per_page: 10
+  per_page: 0
   order_by: -date
 
 # Category & Tag
