--- a/_config.yml
+++ b/_config.yml
@@ -3,11 +3,11 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Mathi Gatti
+title: mathigatti
 subtitle: ''
 description: 'Freelance Data Scientist and Creative Coder'
 keywords:
-author: Mathi Gatti
+author: Mathias Gatti
 language: en
 timezone: ''
 
