--- a/themes/edinburgh/_config.yml
+++ b/themes/edinburgh/_config.yml
@@ -1,5 +1,5 @@
 # Google Analytics Tracking ID
-google_analytics:
+google_analytics: G-9JDDM5FHL5
 
 # Default portfolio post
 default_cover_image: images/unsplash.jpg
