--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: mathigatti
+title: Mathias Gatti
 subtitle: ''
 description: 'Freelance Data Scientist and Creative Coder'
 keywords:
