--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 title: Mathias Gatti
 subtitle: ''
 description: 'Freelance Data Scientist and Creative Coder'
-keywords:
+keywords: 'data scientist, python, web scraping, freelance, creative coder'
 author: Mathias Gatti
 language: en
 timezone: ''
